style.css
/* ... */
.sidebar {
    display: flex;
    flex-direction: column;
    padding: 10px;
    gap: 10px;
    width: 300px;
    background-color: var(--sidebar);
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    border-right-style: solid;
    border-color: var(--color-2);
    border-width: 1px;
    z-index: 4;
    backdrop-filter: blur(15px);
    overflow-y: auto;
}

body.sidebar-right .sidebar {
    left: unset;
    right: 0;
    border-right-style: none;
    border-left-style: solid;
}

body.compact .sidebar {
    width: 76px;
}

.player-switch {
    display: flex;
    padding: 8px;
    background-color: var(--color-1t);
    border-radius: 10px;
    cursor: pointer;
    gap: 8px;
    align-items: center;
    transition: background-color .25s, scale .1s;
}

.player-switch:active {
    scale: .95;
}

.menu-button {
    display: flex;
    border-radius: 10px;
    cursor: pointer;
    padding: 8px;
    transition: background-color .25s, scale .1s;
    align-items: center;
    gap: 8px;
    color: var(--text-color);
    text-decoration: none;
}

.menu-button:active {
    scale: .95;
}

.menu-button.selected {
    background-color: var(--color-1t);
}

.menu-button.selected .menu-icon {
    background-color: var(--accent-color);
}

.menu-button:hover .menu-icon {
    background-color: var(--accent-color);
}

.player-switch.not-selected {
    background-color: transparent;
}

.player-switch.not-selected .player-desc {
    display: none;
}

.player-switch:hover {
    background-color: var(--color-2t);
}

.menu-button:hover {
    background-color: var(--color-2t);
}

.player-head {
    border-radius: 5px;
    aspect-ratio: 1;
    height: 40px;
    image-rendering: pixelated;
}

.player-head-menu {
    border-radius: 5px;
    aspect-ratio: 1;
    height: 40px;
    image-rendering: pixelated;
}

body.compact .player-head-menu {
    height: unset;
    width: 100%;
}

.player-name {
    font-size: 1rem;
    color: var(--text-color);
    font-weight: bold;
}

.player-desc {
    font-size: .8rem;
    color: var(--subtle-text-color);
}

.player-chevron {
    font-size: .8rem;
    color: var(--subtle-text-color);
    margin-left: auto;
    transition: rotate .25s;
    margin-right: 8px;
}

.player-chevron:has(.fa-arrow-right-to-bracket) {
    font-size: 1.2rem;
    color: var(--text-color);
}

.player-delete {
    font-size: .8rem;
    color: var(--text-color);
    margin-left: auto;
    background-color: var(--color-1t);
    height: 32px;
    aspect-ratio: 1;
    border-radius: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color .25s;
}

.player-delete:hover {
    background-color: var(--danger-color);
}

#player-dropdown:popover-open {
    display: grid;
    scale: 1;
    opacity: 1;

    @starting-style {
        scale: .8;
        opacity: 0;
    }
}

.player-info {
    margin-right: 16px;
}

#player-dropdown {
    inset: unset;
    background-color: var(--color-1);
    backdrop-filter: blur(10px);
    border: 0;
    padding: 8px;
    gap: 8px;
    overflow-y: hidden;
    position: fixed;
    top: calc(anchor(bottom) + 10px);
    left: anchor(left);
    border-radius: 10px;
    interpolate-size: allow-keywords;
    transition: opacity .25s, scale .25s, overlay .25s allow-discrete, display .25s allow-discrete;
    border-style: solid;
    border-color: var(--color-2);
    border-width: 1px;
    box-shadow: 0 0 10px black;
    scale: .8;
    opacity: 0;
}

.context-menu {
    inset: unset;
    background-color: var(--color-1);
    backdrop-filter: blur(10px);
    border: 0;
    padding: 0px;
    overflow: hidden;
    position: fixed;
    border-radius: 10px;
    height: max-content;
    interpolate-size: allow-keywords;
    transition: opacity .25s, scale .25s, overlay .25s allow-discrete, display .25s allow-discrete, left .1s, top .1s, translate .1s;
    border-style: solid;
    border-color: var(--color-2);
    border-width: 1px;
    box-shadow: 0 0 10px black;
    width: max-content;
    scale: .8;
    opacity: 0;
}

.context-menu:popover-open {
    display: grid;
    scale: 1;
    opacity: 1;

    @starting-style {
        scale: .8;
        opacity: 0;
    }
}

@position-try --top {
    bottom: calc(anchor(top) + var(--menu-padding));
    top: unset;
}

.more-menu {
    inset: unset;
    background-color: var(--color-1);
    backdrop-filter: blur(10px);
    border: 0;
    padding: 0px;
    overflow-y: hidden;
    position: fixed;
    top: calc(anchor(bottom) + var(--menu-padding));
    position-try-fallbacks: --top;
    right: anchor(right);
    border-radius: 10px;
    height: max-content;
    interpolate-size: allow-keywords;
    transition: opacity .25s, scale .25s, overlay .25s allow-discrete, display .25s allow-discrete;
    border-style: solid;
    border-color: var(--color-2);
    border-width: 1px;
    box-shadow: 0 0 10px black;
    width: max-content;
    scale: .8;
    opacity: 0;
}

.more-menu:popover-open {
    display: grid;
    scale: 1;
    opacity: 1;

    @starting-style {
        scale: .8;
        opacity: 0;
    }
}

.context-menu-button {
    display: flex;
    padding: 8px;
    gap: 8px;
    cursor: pointer;
    transition: background-color .25s;
    align-items: center;
    font-size: 1rem;
    white-space: nowrap;
}

.context-menu-button:hover,
.context-menu-button:focus-visible {
    background-color: var(--color-1t);
}

.context-menu-button.danger:hover,
.context-menu-button.danger:focus-visible {
    /* background-color: color-mix(in srgb, 35% var(--danger-color), transparent); */
    background-color: var(--danger-color);
}

.context-menu-button.danger>i {
    transition: color .25s
}

.context-menu-button.danger:hover>i,
.context-menu-button.danger:focus-visible>i {
    color: var(--text-color);
}

.context-menu-button i {
    color: var(--subtle-text-color);
    width: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
}
/* ... */

